--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,33 @@
-<h2>Hello World!!!!!</h2>
-<h3>wow, this is not going well so far...</h3>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left; 
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: #8a9ace;
+  color: black
+}
+</style>
+</head>
+<body>
+<ul><li><a href=index.html>home</a></li>
+    <li><a href=nested.html>nested examples</a></li>
+    <li><a href=attributes.html>attribute examples</a></li>
+    <li><a href=tags.html>tag examples</a></li>
+    </ul>
+    <h2>Hello World!!!!!</h2>
+</body>
+</html>
+    
