updated all the flies for the assignment
doing this multiple times because I'm having issues getting the site to update when I visit my git url.

--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+  <!-- this styling removes all the default style for list tags and applies nav bar style, colors and position-->
 ul {
   list-style-type: none;
   margin: 0;
