--- a/attributes.html
+++ b/attributes.html
@@ -2,6 +2,7 @@
 <html lang="en-US"> 
 <head>
     <style> 
+    <!-- added shading, font color and sizing to form field boxes-->
         input[type=text] {
           width: 25%;
           padding: 12px 20px;
@@ -15,10 +16,12 @@
     <b>DIY Brew Guy</b>
 <title><em>A place to collect all the skills an resources needed to make some top-notch brews.</em></title>
 </head>
+<!--god help me, I don't know how to insert a picture-->
 <img src="brew.jpg" alt="picture of beer" width="600" height="400">
 <body>
     <p style="color:rgb(68, 34, 34);"></p> Welcome to DIY Brew Guy! Be sure to check out our <a>monthly brew schedule</a> and sign up for email notification when new brew day videos are posted by filling out the contact form below!</p>
     <form action="/action_page.php" method="get"> 
+        <!--Added hover over help text and requirements to form fields-->
     <label title="Enter your first name" for="fname">First Name:</label>
     <input title="Enter your first name" type="text" id="fname" name="fname" required><br><br>
     <label title="Enter your last name" for="lname">Last name:</label>
@@ -33,6 +36,7 @@
     <p><a href="mailto:test@example.com">hege@example.com</a></p>
   </footer>
 <fieldset>
+    <!--liked the look of the legend list with the border so added that to my lists and gave details in the first list-->
     <legend>Things to do:</legend>
     <dl>
 <ul><dt><a href=Schedule.html>Monthly Brew Schedule</a></dt>
@@ -47,7 +51,7 @@
 
 <fieldset>
 <legend>Things to buy:</legend>
-<ul><li><a href=Subscription.html>Brew Subscriptions</a></li></ul>
+<ul><li><a href=Subscription.html>Brew Packages</a></li></ul>
 <ul><li><a href=ingredients.html>Brew Ingredients</a></li></ul>
 <ul><li><a href=hardwear.html>Hardwear</a></li></ul>
 <ul><li><a href=gear.html>Gear</a></li></ul>
