--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+  <!-- this styling removes all the default style for list tags and applies nav bar style, colors and position-->
 ul {
   list-style-type: none;
   margin: 0;
