--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html> 
+  <!--this is kind of like the landing page for the site-->
 <head><b>DIY Brew Guy</b>
 <title><em>A place to collect all the skills an resources needed to make some top-notch brews.</em></title>
 </head>
 <img src="brew.jpg" alt="picture of beer" width="600" height="400">
 <body>
+  <!--I really like the idea of a form to sign up for notifications so included one-->
     <p> Welcome to DIY Brew Guy! Be sure to check out our <a>monthly brew schedule</a> and sign up for email notification when new brew day videos are posted by filling out the contact form below!</p>
     <form action="/action_page.php" method="get"> 
     <label for="fname">First Name:</label>
