made edits to attribute and index

--- a/attributes.html
+++ b/attributes.html
@@ -12,8 +12,12 @@
           background-color: #9cbed4;
           color: black;
         }
+        title {
+            font-size: large;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
         </style>
-    <b>DIY Brew Guy</b>
+    <b class: title="">DIY Brew Guy</b><br>
 <title><em>A place to collect all the skills an resources needed to make some top-notch brews.</em></title>
 </head>
 <!--god help me, I don't know how to insert a picture-->
