--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@ ul {
 
 li {
   float: left; 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-
 li a {
   display: block;
   padding: 8px;
@@ -28,6 +31,8 @@ li a {
     <li><a href=attributes.html>attribute examples</a></li>
     <li><a href=tags.html>tag examples</a></li>
     </ul>
+    <br>
+    <br>
     <h2>Hello World!!!!!</h2>
 </body>
 </html>
