--- a/attributes.html
+++ b/attributes.html
@@ -17,8 +17,8 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         </style>
-    <b class: title="">DIY Brew Guy</b><br>
-<title><em>A place to collect all the skills an resources needed to make some top-notch brews.</em></title>
+    <title>DIY Brew Guy</title><br>
+<p><em>A place to collect all the skills an resources needed to make some top-notch brews.</em></p>
 </head>
 <!--god help me, I don't know how to insert a picture-->
 <img src="brew.jpg" alt="picture of beer" width="600" height="400">
