--- a/Index.html
+++ b/Index.html
@@ -37,10 +37,11 @@ li a {
 </style>
 </head>
 <body>
-<ul><li><a href=index.html>home</a></li>
-    <li><a href=nested.html>nested examples</a></li>
-    <li><a href=attributes.html>attribute examples</a></li>
-    <li><a href=tags.html>tag examples</a></li>
+<ul><li><a href=index.html>Home</a></li>
+    <li><a href=nested.html>Nested examples</a></li>
+    <li><a href=attributes.html>Attribute examples</a></li>
+    <li><a href=tags.html>Tag examples</a></li>
+    <li><a href=Calendar.html>Calendar examples</a></li>
     </ul>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
