more changes week2

--- a/tags.html
+++ b/tags.html
@@ -24,7 +24,7 @@ form{
     </h2>
 <img src="brew.jpg" alt="picture of beer" width="600" height="400">
 <body>
-    <p> Welcome to DIY Brew Guy! Be sure to check out our <a>monthly brew schedule</a> and sign up for email notification when new brew day videos are posted by filling out the contact form below!</p>
+    <p> Welcome to DIY Brew Guy! Be sure to check out our <a href="Calendar.html">monthly brew schedule</a> and sign up for email notification when new brew day videos are posted by filling out the contact form below!</p>
     <form> 
     <label for="fname">First Name:</label>
     <input type="text" id="fname" name="fname"><br><br>
