more edits week 2

--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@ li a {
 <body>
 <ul><li><a href=index.html>Home</a></li>
     <li><a href=nested.html>Nested examples</a></li>
-    <li><a href=attributes.html>Attribute examples</a></li>
+    <li><a href=attributes.html>Style reference file examples</a></li>
     <li><a href=tags.html>Tag examples</a></li>
     <li><a href=Calendar.html>Calendar examples</a></li>
     </ul>
