--- a/attributes.html
+++ b/attributes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
 <head>
-    <title>externalStyle.html</title>
+    <title>AttributeseExternalStyle.html</title>
     <link rel = "stylesheet"
       type = "text/css"
       href = "stylefile.css" />
