--- a/Calendar.html
+++ b/Calendar.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <style>
     h1 {color: rgb(92, 1, 92);
-        font-family: Bahnschrift; 
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; 
     }
+    .calendarinfo {
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-size: 14px
+        Color: rgb(92, 1, 92);
+    }
+        
+    ul {
+         list-style-type: none;
+         margin: 0;
+         padding: 0;
+        overflow: hidden;
+}
+    li a {
+      display: block;
+     padding: 8px;
+     background-color: #8a9ace;
+     color: black
+}
+    
 </style>
 <head></head>
 <h1>DIY Brew Guy Calendar of Events</h1>
 <body>
     <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23F6BF26&amp;ctz=America%2FBoise&amp;src=aW1ibHJ0YWZxZ3JhYXRhODVtZHRjMDVhbjRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23F6BF26&amp;color=%230B8043&amp;showTitle=0&amp;showTabs=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
-<footer></footer>
+<p>
+    Events will be planned at least 3 months in advance and are subject to change depending on availability of brew ingrediants and/or unforseen circumstances. 
+</p>
+<footer>
+    <ul><li><a href=index.html>Home</a></li>
+    <li><a href=nested.html>Nested examples</a></li>
+    <li><a href=attributes.html>Style reference file examples</a></li>
+    <li><a href=tags.html>Tag examples</a></li>
+    <li><a href=Calendar.html>Calendar examples</a></li>
+    </ul> 
+</footer>
