--- a/nested.html
+++ b/nested.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
+<Style>
+        ul {
+         list-style-type: none;
+         margin: 0;
+         padding: 0;
+        overflow: hidden;
+}
+    li a {
+      display: block;
+     padding: 8px;
+     background-color: #8a9ace;
+     color: black
+}
+</Style>
 <fieldset>
     <legend>Things to do:</legend>
     <dl>
@@ -19,3 +33,11 @@
 <ul><li><a href=hardwear.html>Hardwear</a></li></ul>
 <ul><li><a href=gear.html>Gear</a></li></ul>
 </fieldset>
+<footer>
+    <ul><li><a href=index.html>Home</a></li>
+        <li><a href=nested.html>Nested examples</a></li>
+        <li><a href=attributes.html>Style reference file examples</a></li>
+        <li><a href=tags.html>Tag examples</a></li>
+        <li><a href=Calendar.html>Calendar examples</a></li>
+        </ul> 
+</footer>
