--- a/attributes.html
+++ b/attributes.html
@@ -27,4 +27,12 @@
 <ul><li><a href=hardwear.html>Hardwear</a></li></ul>
 <ul><li><a href=gear.html>Gear</a></li></ul>
 </fieldset>
+<footer>
+    <ul><li><a href=index.html>Home</a></li>
+        <li><a href=nested.html>Nested examples</a></li>
+        <li><a href=attributes.html>Style reference file examples</a></li>
+        <li><a href=tags.html>Tag examples</a></li>
+        <li><a href=Calendar.html>Calendar examples</a></li>
+        </ul> 
+</footer>
 </html>
