--- a/tags.html
+++ b/tags.html
@@ -16,6 +16,18 @@ p{
 form{
   font-family: Bahnschrift;
 }
+ul {
+         list-style-type: none;
+         margin: 0;
+         padding: 0;
+        overflow: hidden;
+}
+    li a {
+      display: block;
+     padding: 8px;
+     background-color: #8a9ace;
+     color: black;
+    }
   </style>
   <h1>
     <b class="brown-text">DIY Brew Guy</b><br><br>
@@ -37,6 +49,13 @@ form{
 </body>
 <footer>
     <p>Site Author: Kassie McCool</p>
-    <p><a href="mailto:test@example.com">hege@example.com</a></p>
+    <p><a href="mailto:test@example.com">hege@example.com</a></p><br><br>
+
+    <ul><li><a href=index.html>Home</a></li>
+      <li><a href=nested.html>Nested examples</a></li>
+      <li><a href=attributes.html>Style reference file examples</a></li>
+      <li><a href=tags.html>Tag examples</a></li>
+      <li><a href=Calendar.html>Calendar examples</a></li>
+      </ul> 
   </footer>
 </html>
