--- a/Calendar.html
+++ b/Calendar.html
@@ -15,6 +15,9 @@
          padding: 0;
         overflow: hidden;
 }
+li.a {
+  float: left; 
+}
     li a {
       display: block;
      padding: 8px;
