--- a/attributes.html
+++ b/attributes.html
@@ -14,9 +14,9 @@
     <dd>Check out our brew plans for they next six months!</dd></ul>
 <ul><dt><a href=BrewBlog.html>Read our Brewing Blog</a></dt>
 <dd>Get step by step instructions and lessons learned before starting your next brew!</dd></ul>
-<ul><li><a href=videopage.html>Watch step by step brewing videos</a></li></ul>
+<ul><dt><a href=videopage.html>Watch step by step brewing videos</a></dt></ul>
 </dl>
-<ul><li><a href=aboutus.html>About us</a></li><ul><li><a href=contact.html>Contact info</a></li></ul><ul><li><a href=Locations.html>Locations</a></li></ul>
+<ul><dt><a href=aboutus.html>About us</a></dt><ul><dt><a href=contact.html>Contact info</a></dt></ul><ul><dt><a href=Locations.html>Locations</a></dt></ul>
 </ul>
 </fieldset>
 
@@ -28,11 +28,11 @@
 <ul><li><a href=gear.html>Gear</a></li></ul>
 </fieldset>
 <footer>
-    <ul><li><a href=index.html>Home</a></li>
+    <ul.a><li><a href=index.html>Home</a></li>
         <li><a href=nested.html>Nested examples</a></li>
         <li><a href=attributes.html>Style reference file examples</a></li>
         <li><a href=tags.html>Tag examples</a></li>
         <li><a href=Calendar.html>Calendar examples</a></li>
-        </ul> 
+        </ul.a> 
 </footer>
 </html>
