--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-ul {
+ul.a {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@ li.a {
   float: left; 
 }
 
-li a {
+li a.a {
   display: block;
   padding: 8px;
   background-color: #8a9ace;
@@ -37,12 +37,12 @@ li a {
 </style>
 </head>
 <body>
-<ul><li><a href=index.html>Home</a></li>
-    <li><a href=nested.html>Nested examples</a></li>
-    <li><a href=attributes.html>Style reference file examples</a></li>
-    <li><a href=tags.html>Tag examples</a></li>
-    <li><a href=Calendar.html>Calendar examples</a></li>
-    </ul>
+<ul.a><li.a><a.a href=index.html>Home</a.a></li>
+    <li.a><a.a href=nested.html>Nested examples</a.a></li>
+    <li.a><a.a href=attributes.html>Style reference file examples</a.a></li>
+    <li.a><a.a href=tags.html>Tag examples</a.a></li>
+    <li.a><a.a href=Calendar.html>Calendar examples</a.a></li>
+    </ul.a>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
       </h1>
