--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ li.a {
   float: left; 
 }
 
-li a.a {
+li.a a {
   display: block;
   padding: 8px;
   background-color: #8a9ace;
@@ -37,11 +37,11 @@ li a.a {
 </style>
 </head>
 <body>
-<ul.a><li.a><a.a href=index.html>Home</a.a></li>
-    <li.a><a.a href=nested.html>Nested examples</a.a></li>
-    <li.a><a.a href=attributes.html>Style reference file examples</a.a></li>
-    <li.a><a.a href=tags.html>Tag examples</a.a></li>
-    <li.a><a.a href=Calendar.html>Calendar examples</a.a></li>
+<ul.a><li.a><a href=index.html>Home</a></li>
+    <li.a><a href=nested.html>Nested examples</a></li>
+    <li.a><a href=attributes.html>Style reference file examples</a></li>
+    <li.a><a href=tags.html>Tag examples</a></li>
+    <li.a><a href=Calendar.html>Calendar examples</a></li>
     </ul.a>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
