--- a/attributes.html
+++ b/attributes.html
@@ -28,11 +28,11 @@
 <ul><li><a href=gear.html>Gear</a></li></ul>
 </fieldset>
 <footer>
-    <ul.a><li><a href=index.html>Home</a></li>
+    <ul class=a><li><a href=index.html>Home</a></li>
         <li><a href=nested.html>Nested examples</a></li>
         <li><a href=attributes.html>Style reference file examples</a></li>
         <li><a href=tags.html>Tag examples</a></li>
         <li><a href=Calendar.html>Calendar examples</a></li>
-        </ul.a> 
+        </ul> 
 </footer>
 </html>
