--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 <style>
-ul.a {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-li.a {
+li {
   float: left; 
 }
 
-li.a a {
+li a {
   display: block;
   padding: 8px;
   background-color: #8a9ace;
-  color: black
+  color: black;
 }
 .brown-text {
       color: rgb(112, 29, 29);
@@ -37,12 +37,12 @@ li.a a {
 </style>
 </head>
 <body>
-<ul.a><li.a><a href=index.html>Home</a></li>
-    <li.a><a href=nested.html>Nested examples</a></li>
-    <li.a><a href=attributes.html>Style reference file examples</a></li>
-    <li.a><a href=tags.html>Tag examples</a></li>
-    <li.a><a href=Calendar.html>Calendar examples</a></li>
-    </ul.a>
+<ul><li><a href=index.html>Home</a></li>
+    <li><a href=nested.html>Nested examples</a></li>
+    <li><a href=attributes.html>Style reference file examples</a></li>
+    <li><a href=tags.html>Tag examples</a></li>
+    <li><a href=Calendar.html>Calendar examples</a></li>
+    </ul>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
       </h1>
@@ -68,4 +68,3 @@ li.a a {
     </html>
 </body>
 </html>
-    
