--- a/attributes.html
+++ b/attributes.html
@@ -27,9 +27,10 @@
 <ul><li><a href=hardwear.html>Hardwear</a></li></ul>
 <ul><li><a href=gear.html>Gear</a></li></ul>
 </fieldset>
+
 <footer>
     <ul class=a>
-        <li><a href=index.html>Home</a></li>
+        <li class=a><a href=index.html>Home</a></li>
         <li class=a><a href=nested.html>Nested examples</a></li>
         <li class=a><a href=attributes.html>Style reference file examples</a></li>
         <li class=a><a href=tags.html>Tag examples</a></li>
