--- a/nested.html
+++ b/nested.html
@@ -17,7 +17,7 @@ li.a {
   float: left; 
 }
 
-li a {
+li.a a {
   display: block;
   padding: 8px;
   background-color: #8a9ace;
@@ -39,10 +39,10 @@ li a {
 
 <fieldset>
 <legend>Things to buy:</legend>
-<ul><li><a href=Subscription.html>Brew Subscriptions</a></li></ul>
-<ul><li><a href=ingredients.html>Brew Ingredients</a></li></ul>
-<ul><li><a href=hardwear.html>Hardwear</a></li></ul>
-<ul><li><a href=gear.html>Gear</a></li></ul>
+<ul><dt><a href=Subscription.html>Brew Subscriptions</a></dt></ul>
+<ul><dt><a href=ingredients.html>Brew Ingredients</a></dt></ul>
+<ul><dt><a href=hardwear.html>Hardwear</a></dt></ul>
+<ul><dt><a href=gear.html>Gear</a></dt></ul>
 </fieldset>
 <footer>
     <ul class=a>
