--- a/tags.html
+++ b/tags.html
@@ -17,17 +17,22 @@ form{
   font-family: Bahnschrift;
 }
 ul {
-         list-style-type: none;
-         margin: 0;
-         padding: 0;
-        overflow: hidden;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-    li a {
-      display: block;
-     padding: 8px;
-     background-color: #8a9ace;
-     color: black;
-    }
+
+li {
+  float: left; 
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: #8a9ace;
+  color: black;
+}
   </style>
   <h1>
     <b class="brown-text">DIY Brew Guy</b><br><br>
