--- a/nested.html
+++ b/nested.html
@@ -31,18 +31,20 @@ li.a a {
     <dd>Check out our brew plans for they next six months!</dd></ul>
 <ul><dt><a href=BrewBlog.html>Read our Brewing Blog</a></dt>
 <dd>Get step by step instructions and lessons learned before starting your next brew!</dd></ul>
-<ul><li><a href=videopage.html>Watch step by step brewing videos</a></li></ul>
-</dl>
-<ul><li><a href=aboutus.html>About us</a></li><ul><li><a href=contact.html>Contact info</a></li></ul><ul><li><a href=Locations.html>Locations</a></li></ul>
+<ul><dt><a href=videopage.html>Watch step by step brewing videos</a></dt></ul>
+</dl><br>
+<ul><dt><a href=aboutus.html>About us</a></dt></ul><br>
+<ul><dt><a href=contact.html>Contact info</a></dt></ul><br>
+<ul><dt><a href=Locations.html>Locations</a></dt></ul><br>
 </ul>
 </fieldset>
 
 <fieldset>
 <legend>Things to buy:</legend>
-<ul><dt><a href=Subscription.html>Brew Subscriptions</a></dt></ul>
-<ul><dt><a href=ingredients.html>Brew Ingredients</a></dt></ul>
-<ul><dt><a href=hardwear.html>Hardwear</a></dt></ul>
-<ul><dt><a href=gear.html>Gear</a></dt></ul>
+<ul><dt><a href=Subscription.html>Brew Subscriptions</a></dt></ul><br>
+<ul><dt><a href=ingredients.html>Brew Ingredients</a></dt></ul><br>
+<ul><dt><a href=hardwear.html>Hardwear</a></dt></ul><br>
+<ul><dt><a href=gear.html>Gear</a></dt></ul><br>
 </fieldset>
 <footer>
     <ul class=a>
