--- a/attributes.html
+++ b/attributes.html
@@ -8,7 +8,7 @@
     </head>
     <h1>Left Hand Navigation</h1>
 <fieldset>
-    <legend>Things to do:</legend>
+    <legend id=#legend1>Things to do:</legend>
     <dl>
 <ul><dt><a href=Schedule.html>Monthly Brew Schedule</a></dt>
     <dd>Check out our brew plans for they next six months!</dd></ul>
@@ -21,7 +21,7 @@
 </fieldset>
 
 <fieldset>
-<legend>Things to buy:</legend>
+<legend id=#legend1>Things to buy:</legend>
 <ul><li><a href=Subscription.html>Brew Subscriptions</a></li></ul>
 <ul><li><a href=ingredients.html>Brew Ingredients</a></li></ul>
 <ul><li><a href=hardwear.html>Hardwear</a></li></ul>
