--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ li a {
     <li><a href=attributes.html>Style reference file examples</a></li>
     <li><a href=tags.html>Tag examples</a></li>
     <li><a href=Calendar.html>Calendar examples</a></li>
+    <li><a href=tobuy.html>Classes and IDs</a></li>
     </ul>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
