--- a/tobuy.html
+++ b/tobuy.html
@@ -38,3 +38,20 @@
 <ul><li>Stouts</li></ul>
 <ul><li>Belgian</li></ul>
 
+<H2 class="center medium">Brew Equipment</H2>
+<ul><li>Fermenting</li></ul>
+<ul><li>Boiling</li></ul>
+<ul><li>Grain equipment</li></ul>
+<ul><li>Pots and Kettles</li></ul>
+<ul><li>Sanitation</li></ul>
+<ul><li>Testing</li></ul>
+<ul><li>Plumbing</li></ul>
+
+<H3 class="right small">Storage and Distributing</H3>
+<ul><li>Kegs</li></ul>
+<ul><li>Bottles</li></ul>
+<ul><li>Carbination</li></ul>
+<ul><li>Taps and Tubes</li></ul>
+<ul><li>Grwolers</li></ul>
+<ul><li>Replacement Parts</li></ul>
+
