--- a/tobuy.html
+++ b/tobuy.html
@@ -39,8 +39,8 @@
 <ul><li>Belgian</li></ul>
 
 <H2 class="center medium">Brew Equipment</H2>
-<ul><li class="center medium">Fermenting</li></ul>
-<ul><li>Boiling</li></ul>
+<ul class="center medium"><li>Fermenting</li></ul>
+<ul class="center medium"><li>Boiling</li></ul>
 <ul class="center medium"><li>Grain equipment</li></ul>
 <ul class="center medium"><li>Pots and Kettles</li></ul>
 <ul class="center medium"><li>Sanitation</li></ul>
