--- a/tobuy.html
+++ b/tobuy.html
@@ -30,28 +30,28 @@
 </header>
 <title></title>
 <H1 class="left large">Brew Kits</H1>
-<ul><li>Seasonal</li></ul>
-<ul><li>Copy-cats</li></ul>
-<ul><li>Sours</li></ul>
-<ul><li>IPAs</li></ul>
-<ul><li>Pale</li></ul>
-<ul><li>Stouts</li></ul>
-<ul><li>Belgian</li></ul>
+<dl><li>Seasonal</li></dl>
+<dl><li>Copy-cats</li></dl>
+<dl><li>Sours</li></dl>
+<dl><li>IPAs</li></dl>
+<dl><li>Pale</li></dl>
+<dl><li>Stouts</li></dl>
+<dl><li>Belgian</li></dl>
 
 <H2 class="center medium">Brew Equipment</H2>
-<ul class="center medium"><li>Fermenting</li></ul>
-<ul class="center medium"><li>Boiling</li></ul>
-<ul class="center medium"><li>Grain equipment</li></ul>
-<ul class="center medium"><li>Pots and Kettles</li></ul>
-<ul class="center medium"><li>Sanitation</li></ul>
-<ul class="center medium"><li>Testing</li></ul>
-<ul class="center medium"><li>Plumbing</li></ul>
+<dl class="center medium"><li>Fermenting</li></dl>
+<dl class="center medium"><li>Boiling</li></dl>
+<dl class="center medium"><li>Grain equipment</li></dl>
+<dl class="center medium"><li>Pots and Kettles</li></dl>
+<dl class="center medium"><li>Sanitation</li></dl>
+<dl class="center medium"><li>Testing</li></dl>
+<dl class="center medium"><li>Plumbing</li></dl>
 
 <H3 class="right small">Storage and Distributing</H3>
-<ul class="right small"><li>Kegs</li></ul>
-<ul class="right small"><li>Bottles</li></ul>
-<ul class="right small"><li>Carbination</li></ul>
-<ul class="right small"><li>Taps and Tubes</li></ul>
-<ul class="right small"><li>Grwolers</li></ul>
-<ul class="right small"><li>Replacement Parts</li></ul>
+<dl class="right small"><li>Kegs</li></dl>
+<dl class="right small"><li>Bottles</li></dl>
+<dl class="right small"><li>Carbination</li></dl>
+<dl class="right small"><li>Taps and Tubes</li></dl>
+<dl class="right small"><li>Grwolers</li></dl>
+<dl class="right small"><li>Replacement Parts</li></dl>
 
