--- a/tobuy.html
+++ b/tobuy.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <style>
 .left {
-  text-align: left;
+  text-align: top left;
   color: rgb(99, 31, 31);
 }
 .center {
-  text-align: center;
+  text-align: top center;
   color:rgb(126, 65, 161);
 }
 .right {
-  text-align: right;
+  text-align: top right;
   color:rgb(241, 23, 132);
 }
 .large {
@@ -24,34 +24,40 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: small
 }
+#underlined {
+    text-decoration: underline;
+}
+#italic {
+    font-style: italic;
+}
 </style>
 <header>
 
 </header>
 <title></title>
-<H1 class="left large">Brew Kits</H1>
-<dl><li>Seasonal</li></dl>
-<dl><li>Copy-cats</li></dl>
-<dl><li>Sours</li></dl>
-<dl><li>IPAs</li></dl>
-<dl><li>Pale</li></dl>
-<dl><li>Stouts</li></dl>
-<dl><li>Belgian</li></dl>
+<H1 class="top left large" id=underlined>Brew Kits</H1>
+<dl class="top left large" id=italic><li>Seasonal</li></dl>
+<dl class="top left large"><li>Copy-cats</li></dl>
+<dl class="top left large"><li>Sours</li></dl>
+<dl class="top left large"><li>IPAs</li></dl>
+<dl class="top left large"><li>Pale</li></dl>
+<dl class="top left large"><li>Stouts</li></dl>
+<dl class="top left large"><li>Belgian</li></dl>
 
-<H2 class="center medium">Brew Equipment</H2>
-<dl class="center medium"><li>Fermenting</li></dl>
-<dl class="center medium"><li>Boiling</li></dl>
-<dl class="center medium"><li>Grain equipment</li></dl>
-<dl class="center medium"><li>Pots and Kettles</li></dl>
-<dl class="center medium"><li>Sanitation</li></dl>
-<dl class="center medium"><li>Testing</li></dl>
-<dl class="center medium"><li>Plumbing</li></dl>
+<H2 class="top center medium" id=underlined>Brew Equipment</H2>
+<dl class="top center medium" id=italic><li>Fermenting</li></dl>
+<dl class="top center medium"><li>Boiling</li></dl>
+<dl class="top center medium"><li>Grain equipment</li></dl>
+<dl class="top center medium"><li>Pots and Kettles</li></dl>
+<dl class="top center medium"><li>Sanitation</li></dl>
+<dl class="top center medium"><li>Testing</li></dl>
+<dl class="top center medium"><li>Plumbing</li></dl>
 
-<H3 class="right small">Storage and Distributing</H3>
-<dl class="right small"><li>Kegs</li></dl>
-<dl class="right small"><li>Bottles</li></dl>
-<dl class="right small"><li>Carbination</li></dl>
-<dl class="right small"><li>Taps and Tubes</li></dl>
-<dl class="right small"><li>Grwolers</li></dl>
-<dl class="right small"><li>Replacement Parts</li></dl>
+<H3 class="top right small" id=underlined>Storage and Distributing</H3>
+<dl class="top right small" id=italic><li>Kegs</li></dl>
+<dl class="top right small"><li>Bottles</li></dl>
+<dl class="top right small"><li>Carbination</li></dl>
+<dl class="top right small"><li>Taps and Tubes</li></dl>
+<dl class="top right small"><li>Grwolers</li></dl>
+<dl class="top right small"><li>Replacement Parts</li></dl>
 
