--- a/tobuy.html
+++ b/tobuy.html
@@ -26,6 +26,8 @@
 }
 #underlined {
     text-decoration: underline;
+    background-color: aquamarine;
+    align-items: center;
 }
 #italic {
     font-style: italic;
