trying to align the headings

--- a/tobuy.html
+++ b/tobuy.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <style>
 .left {
-  text-align: top left;
+  float:left
   color: rgb(99, 31, 31);
 }
 .center {
-  text-align: top center;
+  float:inherit
   color:rgb(126, 65, 161);
 }
 .right {
-  text-align: top right;
+  float:inherit
   color:rgb(241, 23, 132);
 }
 .large {
