--- a/tobuy.html
+++ b/tobuy.html
@@ -32,6 +32,12 @@
 #italic {
     font-style: italic;
 }
+dl {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 </style>
 <header>
 
