--- a/tobuy.html
+++ b/tobuy.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <style>
 .left {
-  float:left
+  position: absolute;
   color: rgb(99, 31, 31);
 }
 .center {
-  float:inherit
+    position: absolute;
   color:rgb(126, 65, 161);
 }
 .right {
-  float:inherit
+    position: absolute;
   color:rgb(241, 23, 132);
 }
 .large {
@@ -43,29 +43,29 @@ dl {
 
 </header>
 <title></title>
-<H1 class="top left large" id=underlined>Brew Kits</H1>
-<dl class="top left large" id=italic><li>Seasonal</li></dl>
-<dl class="top left large"><li>Copy-cats</li></dl>
-<dl class="top left large"><li>Sours</li></dl>
-<dl class="top left large"><li>IPAs</li></dl>
-<dl class="top left large"><li>Pale</li></dl>
-<dl class="top left large"><li>Stouts</li></dl>
-<dl class="top left large"><li>Belgian</li></dl>
+<H1 class="left large" id=underlined>Brew Kits</H1>
+<dl class="left large" id=italic><li>Seasonal</li></dl>
+<dl class="left large"><li>Copy-cats</li></dl>
+<dl class="left large"><li>Sours</li></dl>
+<dl class="left large"><li>IPAs</li></dl>
+<dl class="left large"><li>Pale</li></dl>
+<dl class="left large"><li>Stouts</li></dl>
+<dl class="left large"><li>Belgian</li></dl>
 
-<H2 class="top center medium" id=underlined>Brew Equipment</H2>
-<dl class="top center medium" id=italic><li>Fermenting</li></dl>
-<dl class="top center medium"><li>Boiling</li></dl>
-<dl class="top center medium"><li>Grain equipment</li></dl>
-<dl class="top center medium"><li>Pots and Kettles</li></dl>
-<dl class="top center medium"><li>Sanitation</li></dl>
-<dl class="top center medium"><li>Testing</li></dl>
-<dl class="top center medium"><li>Plumbing</li></dl>
+<H2 class="center medium" id=underlined>Brew Equipment</H2>
+<dl class="center medium" id=italic><li>Fermenting</li></dl>
+<dl class="center medium"><li>Boiling</li></dl>
+<dl class="center medium"><li>Grain equipment</li></dl>
+<dl class="center medium"><li>Pots and Kettles</li></dl>
+<dl class="center medium"><li>Sanitation</li></dl>
+<dl class="center medium"><li>Testing</li></dl>
+<dl class="center medium"><li>Plumbing</li></dl>
 
-<H3 class="top right small" id=underlined>Storage and Distributing</H3>
-<dl class="top right small" id=italic><li>Kegs</li></dl>
-<dl class="top right small"><li>Bottles</li></dl>
-<dl class="top right small"><li>Carbination</li></dl>
-<dl class="top right small"><li>Taps and Tubes</li></dl>
-<dl class="top right small"><li>Grwolers</li></dl>
-<dl class="top right small"><li>Replacement Parts</li></dl>
+<H3 class="right small" id=underlined>Storage and Distributing</H3>
+<dl class="right small" id=italic><li>Kegs</li></dl>
+<dl class="right small"><li>Bottles</li></dl>
+<dl class="right small"><li>Carbination</li></dl>
+<dl class="right small"><li>Taps and Tubes</li></dl>
+<dl class="right small"><li>Grwolers</li></dl>
+<dl class="right small"><li>Replacement Parts</li></dl>
 
