--- a/tobuy.html
+++ b/tobuy.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <style>
 .left {
-  position: absolute;
+ {display:inline-block;
+  margin-right:10px;
   color: rgb(99, 31, 31);
 }
 .center {
-    position: absolute;
+  {display:inline-block;
   color:rgb(126, 65, 161);
 }
 .right {
-    position: absolute;
+  {display:inline-block;} 
   color:rgb(241, 23, 132);
 }
 .large {
