--- a/tobuy.html
+++ b/tobuy.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <style>
 .left {
- {display:inline-block;
-  margin-right:10px;
-  color: rgb(99, 31, 31);
+ display:inline-block;
+  margin-right:10px; width:200px; 
+ 
 }
 .center {
-  {display:inline-block;
-  color:rgb(126, 65, 161);
+  display:inline-block;
+  margin-right:10px; width:200px; 
+  
 }
 .right {
-  {display:inline-block;} 
-  color:rgb(241, 23, 132);
+  display:inline-block;
+  margin-right:10px; width:200px; 
+  
 }
 .large {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: large;
+    color: rgb(99, 31, 31);
 }
 .medium {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: medium
+    font-size: medium;
+    color:rgb(126, 65, 161);
 }
 .small {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: small
+    font-size: small;
+    color:rgb(241, 23, 132);
 }
 #underlined {
     text-decoration: underline;
@@ -39,66 +44,36 @@ dl {
   padding: 0;
   overflow: hidden;
 }
-.heart {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: pink;
-    height: 50px;
-    width: 50px;
-    transform:rotate(-45);
-  }
-  .heart::after {
-    background-color: pink;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 0px;
-    left: 25px;
-  }
-  .heart::before {
-    content:"";
-    background-color: pink;
-    border-radius: 50%;
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: -25px;
-    left: 0px;
-  }
 </style>
 <header>
 
 </header>
 <title></title>
-<H1 class="left large" id=underlined>Brew Kits</H1>
-<dl class="left large" id=italic><li>Seasonal</li></dl>
-<dl class="left large"><li>Copy-cats</li></dl>
-<dl class="left large"><li>Sours</li></dl>
-<dl class="left large"><li>IPAs</li></dl>
-<dl class="left large"><li>Pale</li></dl>
-<dl class="left large"><li>Stouts</li></dl>
-<dl class="left large"><li>Belgian</li></dl>
+<dl><li><H1 class="left large" id=underlined>Brew Kits</H1></li>
+<dl class="large" id=italic><li>Seasonal</li></dl>
+<dl class="large"><li>Copy-cats</li></dl>
+<dl class="large"><li>Sours</li></dl>
+<dl class="large"><li>IPAs</li></dl>
+<dl class="large"><li>Pale</li></dl>
+<dl class="large"><li>Stouts</li></dl>
+<dl class="large"><li>Belgian</li></dl></dl>
 
-<H2 class="center medium" id=underlined>Brew Equipment</H2>
-<dl class="center medium" id=italic><li>Fermenting</li></dl>
-<dl class="center medium"><li>Boiling</li></dl>
-<dl class="center medium"><li>Grain equipment</li></dl>
-<dl class="center medium"><li>Pots and Kettles</li></dl>
-<dl class="center medium"><li>Sanitation</li></dl>
-<dl class="center medium"><li>Testing</li></dl>
-<dl class="center medium"><li>Plumbing</li></dl>
 
-<H3 class="right small" id=underlined>Storage and Distributing</H3>
-<dl class="right small" id=italic><li>Kegs</li></dl>
-<dl class="right small"><li>Bottles</li></dl>
-<dl class="right small"><li>Carbination</li></dl>
-<dl class="right small"><li>Taps and Tubes</li></dl>
-<dl class="right small"><li>Grwolers</li></dl>
-<dl class="right small"><li>Replacement Parts</li></dl>
+<dl><li><H2 class="center medium" id=underlined>Brew Equipment</H2></li>
+<dl class="medium" id=italic><li>Fermenting</li></dl>
+<dl class="medium"><li>Boiling</li></dl>
+<dl class="medium"><li>Grain equipment</li></dl>
+<dl class="medium"><li>Pots and Kettles</li></dl>
+<dl class="medium"><li>Sanitation</li></dl>
+<dl class="medium"><li>Testing</li></dl>
+<dl class="medium"><li>Plumbing</li></dl></dl>
+
+
+<dl><li><H3 class="right small" id=underlined>Storage and Distributing</H3>
+<dl class="small" id=italic><li>Kegs</li></dl>
+<dl class="small"><li>Bottles</li></dl>
+<dl class="small"><li>Carbination</li></dl>
+<dl class="small"><li>Taps and Tubes</li></dl>
+<dl class="small"><li>Grwolers</li></dl>
+<dl class="small"><li>Replacement Parts</li></dl>
 
