--- a/tobuy.html
+++ b/tobuy.html
@@ -46,11 +46,11 @@ dl {
 }
 .object {
   animation: MoveUpDown 1s linear infinite;
-  position: absolute;
+  Position: absolute; 
+  text-align: right;
   left: 800;
   bottom: 400;
 }
-
 @keyframes MoveUpDown {
   50%, 100% {
     bottom: 800;
