--- a/tobuy.html
+++ b/tobuy.html
@@ -42,8 +42,21 @@ dl {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
+h1{
+    width: 25%;
+    display: flex;
+}
+h2{
+    width: 25%;
+    display: flex;
+}
+h3{
+    width: 25%;
+    display: flex;
+}
+
+
 .object {
   animation: MoveUpDown 1s linear infinite;
   Position: absolute; 
@@ -91,7 +104,7 @@ dl {
 <dl class="small"><li>Taps and Tubes</li></dl>
 <dl class="small"><li>Grwolers</li></dl>
 <dl class="small"><li>Replacement Parts</li></dl>
-
+<!--this is the animation div the style tags are .object and keyframs-->
 <div class="object">
     TAKE MY MONEY!
   </div>
