--- a/attributes.html
+++ b/attributes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US"> 
+    <!-- this file adopts all style css from the external style sheet listed below -->
 <head>
     <title>AttributeseExternalStyle.html</title>
     <link rel = "stylesheet"
