--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ li a {
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
       </h1>
-        <h2>A place to collect all the skills an resources needed to make some top-notch brews.</title>
+        <h2>A place to collect all the skills and resources needed to make some top-notch brews.</title>
         </h2>
     <img src="brew.jpg" alt="picture of beer" width="600" height="400">
     <body>
