--- a/Index.html
+++ b/Index.html
@@ -43,6 +43,7 @@ li a {
     <li><a href=tags.html>Tag examples</a></li>
     <li><a href=Calendar.html>Calendar examples</a></li>
     <li><a href=tobuy.html>Classes and IDs</a></li>
+    <li><a href=JSFunctions.html>JavaScript Examples</a></li>
     </ul>
       <h1>
         <b class="brown-text">DIY Brew Guy</b><br><br>
