--- a/JSFunctions.html
+++ b/JSFunctions.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Functional JS Page</title>
-<link rel = "stylesheet"
+<link rel = "JSCSS.css "
 type = "text/css"
 href = "JSCSS.css" />
 <script src="MyScript.js"></script>
+<title>Functional JS Page</title>
+
 </head>
 <body>
 <h1>This is my heading</h1>
@@ -15,9 +16,9 @@ href = "JSCSS.css" />
 <input onclick="change()" type="button" value="Please take a moment to click this button" id="button1"></input>
 
 <!-- this only changes the color once.-->
-<button class="btn-click">Then click this button</button>
+<button class="button-click" type="button" value="Then click this button" id="button2"></button>
 <!-- this will toggle the color back and forth-->
-<button class="btn-toggle">Now click this one a couple of times</button>
+<button class="button-toggle" type="button" value="Then click this button" id="button3"></button>
 
 
 </body>
