yep, it still doesn't work

--- a/JSFunctions.html
+++ b/JSFunctions.html
@@ -11,7 +11,7 @@
 
 <form>
     <input type="button" value="click here" onclick="display()"/>
-    <script>"MyScript.js"</script>
+    <script>"display.js"</script>
 <br>
 <br>
 <div>
