--- a/JSFunctions.html
+++ b/JSFunctions.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="JSCSS.css">
 <title>Functional JS Page</title>
 </head>
 <body>
