--- a/JSFunctions.html
+++ b/JSFunctions.html
@@ -9,11 +9,11 @@
 <h2>click an item to edit this text.</h2>
 <button id="our-button">Add a new list item</button>
 <ul id="our-list">
-    <li>first item</li>
-    <li>Second item</li>
-    <li>Third item</li>
-    <li>fourth item</li>
-    <li>fifth item</li>
+    <li>html</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>bootstrap</li>
+    <li>Next Language</li>
 </ul>
 
 <script src="display.js"></script>
