--- a/finalhome.html
+++ b/finalhome.html
@@ -1,2 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>finalstyle</title>
+        <link rel = "stylesheet" type = "text/css" href = "finalstyle.css">
+     </head>
+    <section id="section01">
+        <div class="row h-100">
+          <div class="col-6 bannerImage"></div>
+          <div class="col-6 my-auto p-5 bannerText">
+            <div class="oval"></div>
+            <div class="p-5">
+              <h1>My web development journey.</h1>
+              <h3>Kassie McCool| Boise State</h3>
+              <p>Welcome to this synopsis in web form of my journey into the relm of web developemnt.</p>              
+            </div>
+          </div>
+        </div>
+      </section>
+      <script src="finalJS.js">
+    </script>
+      </html>
