--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ li a {
 </style>
 </head>
 <body>
-<ul><li><a href=index.html>Home</a></li>
+<ul><li><a href=finalhome.html>Final Landing Page</a></li>
     <li><a href=nested.html>Nested examples</a></li>
     <li><a href=attributes.html>Style reference file examples</a></li>
     <li><a href=tags.html>Tag examples</a></li>
