--- a/finalhome.html
+++ b/finalhome.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <img id="#bannerImage" src="glitter.jpg" alt="image error">
         <title>finalstyle</title>
         <link rel = "stylesheet" type = "text/css" href = "finalstyle.css">
      </head>
