--- a/finalhome.html
+++ b/finalhome.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img id="#bannerImage" src="glitter.jpg" alt="image error">
-        <title>finalstyle</title>
-        <link rel = "stylesheet" type = "text/css" href = "finalstyle.css">
-     </head>
-    <section id="section01">
-        <div class="row h-100">
-          <div class="col-6 bannerImage"></div>
-          <div class="col-6 my-auto p-5 bannerText">
-            <div class="oval"></div>
-            <div class="p-5">
-              <h1>My web development journey.</h1>
-              <h3>Kassie McCool| Boise State</h3>
-              <p>Welcome to this synopsis in web form of my journey into the relm of web developemnt.</p>              
-            </div>
-          </div>
-        </div>
-      </section>
-      <script src="finalJS.js">
-    </script>
-      </html>
+        <meta charset="utf-8"/>
+        <title>This is my web development Journey</title>
+        <link rel="stylesheet" type="text/css" href="finalstyle.css" />
+    </head>
+    <body>
+        <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
+            <li><a href=AboutMe.html>About me</a></li>
+            <li><a href=attributes.html>Partner</a></li>
+            <li><a href=tags.html>Tag examples</a></li>
+            <li><a href=Calendar.html>Calendar examples</a></li>
+            <li><a href=tobuy.html>Classes and IDs</a></li>
+            <li><a href=JSFunctions.html>JavaScript Examples</a></li>
+        </ul>
+        <center><h1>
+            <b class="blue-text">Hello! My name is Kassie McCool! <br> Welcome to My Ongoing Web Developemnt Journey</b><br>
+        </h1></center>
+        <img src="banner.jpg" alt="picture of glitter" class="inner"><br><br>
+        <center><p class="text">
+            Funny thing about me, my job title is "Application Development Analyst" turns out, I have lots to learn about development! I do front end development in SharePoint by day. I specialize in automating business processes with workflows. The tool I use to accomplish this is powerful, and if you know how to use it, requires very little development. <br> I've always wanted to learn Web Development, and it was always a daunting task. Now that I'm taking this Web Developemnt course, I've realized, my fear was totally valid. Feel free to brouse my site by clicking the navigation bar at the top of this page. It took about three hours to get it to change color on hover, so be sure notice that seemingly simple feature. </li>
+        </p></center>
+    </body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        Developed July-August 2020, mid-pandemic by Kassie McCool
+    </footer>
+</html>
