--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,7 +28,7 @@
     <body>
         <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
             <li><a href=AboutMe.html>About me</a></li>
-            <li><a href=attributes.html>Partner</a></li>
+            <li><a href=team.html>The Team</a></li>
             <li><a href=tags.html>Tag examples</a></li>
             <li><a href=Calendar.html>Calendar examples</a></li>
             <li><a href=tobuy.html>Classes and IDs</a></li>
