--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
         .column {
           float: left;
           width: 50%;
-          padding: 10px;
+          padding: 30px;
         }
         
         /* Clear floats after the columns */
@@ -21,8 +21,12 @@
         }
         </style>
     <head>
-        <meta charset="utf-8"/>
         <title>This is my web development Journey</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="finalstyle.css" />
     </head>
     <body>
@@ -41,8 +45,8 @@
 
         <div class="row">
           <div class="column" class="column1" background-color=#fccf17>
-            <h2>That's me!</h2>
-            <p>Snowboarding on Bogus Basin</p>
+            <h2>That's me, Kassie!</h2>
+            <p>Snowboarding on Bogus Basin</p><br>
             <img src="Snowboarding.JPG" alt="picture of Kassie snowboarding" class="aboutPic">
           </div>
           <div class="column" class="column2" background-color=#fec20f>
