--- a/finalhome.html
+++ b/finalhome.html
@@ -8,6 +8,7 @@
     <body>
         <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
             <li><a href=AboutMe.html>About me</a></li>
+            <li><a href=bootstrap.html>Week 6 Bootstrap</a></li>
             <li><a href=team.html>The Team</a></li>
             <li><a href=tags.html>Tag examples</a></li>
             <li><a href=Calendar.html>Calendar examples</a></li>
