updated the urls in nav

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@ li a {
 </head>
 <body>
 <ul><li><a href=finalhome.html>Final Landing Page</a></li>
-    <li><a href=bootstrap.html>Week 6 Bootstrap</a></li>
+    <li><a href=Bootstrap.html>Week 6 Bootstrap</a></li>
     <li><a href=nested.html>Nested examples</a></li>
     <li><a href=attributes.html>Style reference file examples</a></li>
     <li><a href=tags.html>Tag examples</a></li>
